Commit all changes